# postgres

./: .cirrus.star  .cirrus.tasks.yml  .cirrus.yml  .gitignore  GNUmakefile.in  configure  configure.ac  init  meson.build  meson_options.txt  pytest.ini
.github/workflows/: pg-ci.yml
config/: Makefile  check_pytest.py  conftest.py  programs.m4  pytest-requirements.txt
contrib/: Makefile  meson.build
contrib/entra_validator/: Makefile  entra_validator  entra_validator.c  entra_validator.py  meson.build
doc/: Makefile
doc/src/sgml/: client-auth.sgml  config.sgml  filelist.sgml  func.sgml  installation.sgml  libpq.sgml  monitoring.sgml  oauth-validators.sgml  postgres.sgml
src/: Makefile  Makefile.global.in  Makefile.recurse
src/backend/access/brin/: brin_revmap.c
src/backend/access/common/: reloptions.c
src/backend/access/gin/: ginbtree.c  ginget.c
src/backend/access/gist/: gistget.c
src/backend/access/hash/: hashsearch.c
src/backend/access/heap/: heapam.c  heapam_handler.c
src/backend/access/nbtree/: nbtsearch.c
src/backend/access/spgist/: spgscan.c
src/backend/access/table/: tableam.c
src/backend/catalog/: partition.c  pg_inherits.c  pg_publication.c
src/backend/commands/: analyze.c  explain.c  publicationcmds.c  tablecmds.c
src/backend/executor/: nodeIndexscan.c  nodeSeqscan.c
src/backend/libpq/: auth-oauth.c  auth.c  be-secure-openssl.c  hba.c
src/backend/optimizer/path/: allpaths.c
src/backend/optimizer/plan/: createplan.c  planner.c  setrefs.c
src/backend/optimizer/prep/: prepjointree.c
src/backend/parser/: gram.y  parse_expr.c
src/backend/partitioning/: partdesc.c
src/backend/postmaster/: auxprocess.c  postmaster.c
src/backend/replication/logical/: tablesync.c
src/backend/replication/pgoutput/: pgoutput.c
src/backend/storage/buffer/: bufmgr.c
src/backend/utils/activity/: backend_status.c  wait_event.c  wait_event_names.txt
src/backend/utils/adt/: pgstatfuncs.c
src/backend/utils/init/: postinit.c
src/backend/utils/misc/: guc.c  guc_tables.c  postgresql.conf.sample
src/common/: Makefile  jsonapi.c  meson.build  parse_manifest.c  stringinfo.c
src/include/: pg_config.h.in  port.h
src/include/access/: tableam.h
src/include/catalog/: pg_inherits.h
src/include/common/: int.h  jsonapi.h
src/include/lib/: stringinfo.h
src/include/libpq/: hba.h  oauth.h
src/include/nodes/: execnodes.h  parsenodes.h  plannodes.h
src/include/storage/: bufmgr.h
src/include/utils/: backend_status.h  rel.h  wait_event.h
src/interfaces/: Makefile
src/interfaces/ecpg/: Makefile
src/interfaces/libpq/: Makefile  exports.txt  fe-auth-oauth-curl.c  fe-auth-oauth-dynamic.c  fe-auth-oauth-static.c  fe-auth-oauth.c  fe-auth-oauth.h  fe-auth.c  fe-auth.h  fe-connect.c  fe-misc.c  fe-secure-gssapi.c  fe-secure-openssl.c  fe-secure.c  gen_libpqrc.c  libpq-fe.h  libpq-int.h  libpq-oauth.h  meson.build  pqexpbuffer.c  pqexpbuffer.h
src/interfaces/libpq-oauth/: Makefile  README  exports.txt  fe-auth-oauth-curl.c  fe-auth-oauth-curl.h  meson.build  nls.mk  oauth-curl.c  oauth-curl.h  oauth-utils.c  oauth-utils.h  test-oauth-curl.c
src/interfaces/libpq-oauth/po/: meson.build
src/interfaces/libpq-oauth/t/: 001_oauth.pl
src/interfaces/libpq/t/: 006_oauth.pl  006_service.pl
src/interfaces/libpq/test/: meson.build
src/makefiles/: meson.build
src/pl/: Makefile
src/port/: path.c
src/test/: Makefile  meson.build
src/test/authentication/: Makefile  meson.build
src/test/authentication/t/: 001_password.pl  005_sspi.pl  007_pre_auth.pl
src/test/kerberos/t/: 001_auth.pl
src/test/modules/: Makefile  meson.build
src/test/modules/oauth_validator/: Makefile  README  fail_validator.c  flow.c  kqueue_test.c  meson.build  oauth_flow.c  oauth_hook_client.c  oauth_test_common.c  oauth_test_common.h  validator.c
src/test/modules/oauth_validator/t/: 001_server.pl  002_client.pl  003_plugin.pl  oauth_server.py
src/test/modules/oauth_validator/t/OAuth/: Server.pm
src/test/modules/rpr/: .gitignore  Makefile  gram.y  gramparse.h  meson.build  parser.c  preproc.y  preproc_extern.h  rpr_prefer.c  scan.l
src/test/modules/rpr/expected/: rpr.out
src/test/modules/rpr/sql/: rpr.sql
src/test/modules/test_json_parser/: Makefile  meson.build
src/test/modules/test_json_parser/t/: 001_test_json_parser_incremental.pl  002_inline.pl  003_test_semantic.pl
src/test/perl/PostgreSQL/Test/: Cluster.pm  OAuthServer.pm  Utils.pm
src/test/pytest/: Makefile  meson.build
src/test/pytest/pg/: __init__.py  _env.py  _win32.py  fixtures.py
src/test/pytest/plugins/: pgtap.py
src/test/pytest/pyt/: conftest.py  test_libpq.py  test_something.py
src/test/python/: meson.build
src/test/python/client/: conftest.py  test_oauth.py
src/test/python/server/: oauthtest.c  test_oauth.py
src/test/recovery/t/: 037_invalid_database.pl
src/test/regress/: parallel_schedule  pg_regress.c
src/test/regress/expected/: publication.out  rpr.out  sysviews.out
src/test/regress/sql/: publication.sql  rpr.sql
src/test/ssl/: Makefile  meson.build  requirements.txt
src/test/ssl/pyt/: conftest.py  test_client.py  test_server.py
src/test/ssl/t/: 001_ssltests.pl
src/test/subscription/t/: 013_partition.pl
src/tools/: testwrap
src/tools/msvc/: Solution.pm
src/tools/pginclude/: headerscheck
src/tools/pgindent/: pgindent  typedefs.list
